--- a/src/app/pages/tramite-documentario/documento-interno-filtro/documento-interno-filtro.component.html
+++ b/src/app/pages/tramite-documentario/documento-interno-filtro/documento-interno-filtro.component.html
@@ -29,9 +29,9 @@
                 [(value)]="bandejaf.bandeja"
                 (selectionChange)="actualizar()">
       <!-- <mat-option value="1"> Mesa de Partes</mat-option> -->
-      <mat-option value="e"> Doc. Entrada</mat-option>
+      <mat-option value="e"> Doc. Entrada V°B°</mat-option>
       <mat-option value="a"> Doc. Aprobados ó Rechazados</mat-option>
-      <mat-option value="s"> Doc. Emitidos</mat-option>
+      <mat-option value="s"> Doc. Emitidos </mat-option>
       <!-- <mat-option [value]="0"> Todas las bandejas del Usuario</mat-option> -->
     </mat-select>
   </mat-form-field>
