--- a/src/app/pages/tramite-documentario/seguimiento-documento/seguimiento-documento.component.scss
+++ b/src/app/pages/tramite-documentario/seguimiento-documento/seguimiento-documento.component.scss
@@ -2,6 +2,19 @@
   background: crimson;
   background-color: #4a8cb1 !important;
 }
+.mat-column-nombreUsuario{
+    word-wrap: break-word !important;
+    white-space: unset !important;
+    flex: 0 0 15% !important;
+    width: 15% !important;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    word-break: break-word;
+    hyphens: auto;
+    //justify-content: center;
+    //font-weight: bold;
+  }
+
 .mat-column-nombreRemitenteDocumento{
     word-wrap: break-word !important;
     white-space: unset !important;
@@ -15,18 +28,18 @@
     //font-weight: bold;
   }
 
-.mat-column-contenidoDocumento{
-    word-wrap: break-word !important;
-    white-space: unset !important;
-    flex: 0 0 22% !important;
-    width: 22% !important;
-    overflow-wrap: break-word;
-    word-wrap: break-word;
-    word-break: break-word;
-    hyphens: auto;
-    //justify-content: center;
-    font-weight: bold;
-  }
+// .mat-column-contenidoDocumento{
+//     word-wrap: break-word !important;
+//     white-space: unset !important;
+//     flex: 0 0 22% !important;
+//     width: 22% !important;
+//     overflow-wrap: break-word;
+//     word-wrap: break-word;
+//     word-break: break-word;
+//     hyphens: auto;
+//     //justify-content: center;
+//     font-weight: bold;
+//   }
 
   .mat-column-acciones{
     word-wrap: break-word !important;
@@ -43,8 +56,8 @@
   .mat-column-codigoDocumentoTramite{
     word-wrap: break-word !important;
     white-space: unset !important;
-    flex: 0 0 8% !important;
-    width: 8% !important;
+    flex: 0 0 7% !important;
+    width: 7% !important;
     overflow-wrap: break-word;
     word-wrap: break-word;
     word-break: break-word;
@@ -53,15 +66,15 @@
     //font-weight: bold;
   }
 
-  .mat-column-fechaDocumento{
-    word-wrap: break-word !important;
-    white-space: unset !important;
-    flex: 0 0 10% !important;
-    width: 10% !important;
-    overflow-wrap: break-word;
-    word-wrap: break-word;
-    word-break: break-word;
-    hyphens: auto;
-    justify-content: center;
-    //font-weight: bold;
-  }
+//   .mat-column-fechaDocumento{
+//     word-wrap: break-word !important;
+//     white-space: unset !important;
+//     flex: 0 0 10% !important;
+//     width: 10% !important;
+//     overflow-wrap: break-word;
+//     word-wrap: break-word;
+//     word-break: break-word;
+//     hyphens: auto;
+//     justify-content: center;
+//     //font-weight: bold;
+//   }
