--- a/src/app/pages/tramite-documentario/documento-anexo-interno/documento-anexo-interno.component.html
+++ b/src/app/pages/tramite-documentario/documento-anexo-interno/documento-anexo-interno.component.html
@@ -4,7 +4,7 @@
        fxLayoutAlign="start center"
        fxLayoutGap="8px"
        class="mg-bot-8">
-    <span class="fs-16 fw-500">Archivos Anexos Gerencia</span>
+    <span class="fs-16 fw-500">Archivos Anexos Post Aprobación</span>
     <button mat-icon-button
             color="primary"
             *ngIf="bandejaActiva == 'e'"
@@ -264,7 +264,7 @@
        fxLayoutAlign="start center"
        fxLayoutGap="8px"
        class="mg-bot-8">
-    <span class="fs-16 fw-500">Archivos  Anexos</span>
+    <span class="fs-16 fw-500">Archivos Anexos Iniciales</span>
     <button mat-icon-button
             *ngIf="doc.tipoDerivacion == 'R'"
             color="primary"
