--- a/src/app/pages/tramite-documentario/reporte-vb-detalle/reporte-vb-detalle.component.html
+++ b/src/app/pages/tramite-documentario/reporte-vb-detalle/reporte-vb-detalle.component.html
@@ -1,17 +1,15 @@
-<page-container class="column">
-  <mat-tab-group animationDuration="0ms">
-   <mat-tab class="pestana"
-            label="Buscar Documentos"> 
-    <seguimiento-filtro></seguimiento-filtro>
 <mat-card>
-<div fxLayout="column">
+<div fxLayout="column"
+     class="pie">
 <div fxLayout="row"
      fxLayoutAlign="start center"
-     fxLayoutGap="8px">
+     fxLayoutGap="8px"
+     >
 </div>
 <table-container [idContainer]="'tdoc'"
                  [heightSub]="335"
-                 [loading]="pending$ | async">
+                 [loading]="pending$ | async"
+                 >
   <table mat-table
          matSort
          class="table-bordered"
@@ -34,25 +32,6 @@
                     (click)="verReporte(element.codigoDocumentoTramite)">
           <mat-icon *ngIf="columna=='acciones'">description</mat-icon>
           </button>
-
-          <button   mat-icon-button
-                    *ngIf="columna=='acciones'"
-                    matTooltip="Ver Cargo"
-                    style="margin-top:10px; margin-right: 10px;"
-                    color="primary"
-                    (click)="openCargo(element.codigoDocumentoTramite)">
-          <mat-icon *ngIf="columna=='acciones'">verified_user</mat-icon>
-          </button>
-
-          <button   mat-icon-button
-                    *ngIf="columna=='acciones'"
-                    matTooltip="Ver Reporte"
-                    style="margin-top:10px; margin-right: 10px;"
-                    color="primary"
-                    (click)="verReporteGrafo(element)">
-          <mat-icon *ngIf="columna=='acciones'">graphic_eq</mat-icon>
-          </button>
-
         </td>
 
     </ng-container>
@@ -68,10 +47,5 @@
 </mat-card>
 
 
-</mat-tab>
-<mat-tab label="Buscar Doc. V°B°">  
-  <reporte-vb></reporte-vb>
-</mat-tab>
-</mat-tab-group>
-</page-container>
+
 
