--- a/src/app/pages/tramite-documentario/valorizacion-detalle/valorizacion-detalle.component.html
+++ b/src/app/pages/tramite-documentario/valorizacion-detalle/valorizacion-detalle.component.html
@@ -54,7 +54,7 @@
       </mat-form-field>      
     </row-container>
     <row-container>
-      <two-picker class="campoRuc"
+      <two-picker class="campoFecha"
               [fechaInicio]="form.value.porFechaInicio"
               [fechaFin]="form.value.porFechaFin"
               (changeFecha)="changeFecha($event)">
