--- a/src/app/pages/tramite-documentario/documento-detalle/documento-detalle.html
+++ b/src/app/pages/tramite-documentario/documento-detalle/documento-detalle.html
@@ -178,6 +178,7 @@
                 color="primary">
   <mat-label>Asunto</mat-label>
   <textarea matInput
+            autosize
             rows="2"
             readonly
             value="{{doc.contenidoDocumento}}"></textarea>
