--- a/src/app/pages/tramite-documentario/documento-adjuntar/documento-adjuntar.component.html
+++ b/src/app/pages/tramite-documentario/documento-adjuntar/documento-adjuntar.component.html
@@ -205,7 +205,7 @@
         *matHeaderCellDef>Acciones</th>
     <td mat-cell
         *matCellDef="let e"> -->
-  <div class="descarga">
+  <div class="descarga" *ngIf = "archivos.anexosIniciales.length > 0">
       <mat-hint >Descargar todo .Zip</mat-hint>
       <button mat-icon-button 
                   matTooltip="Descargar"
