--- a/src/app/@core/side-nav/components/sidenav-item/sidenav-item.component.html
+++ b/src/app/@core/side-nav/components/sidenav-item/sidenav-item.component.html
@@ -2,7 +2,7 @@
   <!-- <a class="sidenav-anchor" *ngIf="!(item.children?.length > 0); else elseBlock"
      mat-list-item matRipple [routerLink]="[item.link]" routerLinkActive="active"
      [routerLinkActiveOptions]="{exact: true}"> -->
-  <a class="sidenav-anchor" *ngIf="!(item.children?.length > 0); else elseBlock"
+<a class="sidenav-anchor" *ngIf="!(item.children); else elseBlock"
      mat-list-item matRipple routerLink="/{{item.link}}" routerLinkActive="active"
      [routerLinkActiveOptions]="{exact: true}">
 
